fixed gap

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,6 @@
   display: flex;
   margin-top: 1em;
   margin-bottom: 1em;
-  gap: 2em;
 }
 
 .panel {
@@ -44,4 +43,6 @@ button:hover {
 
 .link {
   color: #09d3ac;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
